Closed Bug 901413 Opened 11 years ago Closed 11 years ago

"Don't know how to read/write to the thread state via the mcontext_t" on GNU/kFreeBSD

Categories

(Core :: JavaScript Engine, defect)

24 Branch
All
Other
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla26
Tracking Status
firefox24 --- fixed
firefox25 --- fixed
firefox26 --- fixed

People

(Reporter: glandium, Assigned: glandium)

Details

(Whiteboard: [qa-])

Attachments

(1 file)

      No description provided.
Assignee: general → mh+mozilla
Attachment #785618 - Flags: review?(luke) → review+
Comment on attachment 785618 [details] [diff] [review]
Support GNU/kFreeBSD in AsmJSSignalHandlers.cpp

[Approval Request Comment]
Requesting for beta as well because i'd like this in ESR24 so that I don't have to carry the patch around for the ESR.
User impact if declined: Build failure on GNU/kFreeBSD
Testing completed (on m-c, etc.): Tested on a GNU/kFreeBSD system
Risk to taking this patch (and alternatives if risky): NPOTB.
String or IDL/UUID changes made by this patch: None
Attachment #785618 - Flags: approval-mozilla-beta?
Attachment #785618 - Flags: approval-mozilla-aurora?
https://hg.mozilla.org/mozilla-central/rev/a11cd50edb0d
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
Attachment #785618 - Flags: approval-mozilla-beta?
Attachment #785618 - Flags: approval-mozilla-beta+
Attachment #785618 - Flags: approval-mozilla-aurora?
Attachment #785618 - Flags: approval-mozilla-aurora+
Assuming no verification needed here. Please add the verifyme keyword and remove the [qa-] whiteboard tag to request verification.
Whiteboard: [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: