Bug 901413 - Support GNU/kFreeBSD in AsmJSSignalHandlers.cpp. r=luke, a=bajaj